fix DT-1365, add spacing and align button in forms

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -289,12 +289,15 @@ textarea {
 .widget.profile form fieldset input, .signupform fieldset input, .blogsearch form input {
     width: 42%;
     height: 45px;
+    margin-bottom: 10px;
+    margin-right: 5px;
     .border-radius(5px);
     @media @tablet {
         width: 80%;
     }
     @media @mobile {
         width: 100%;
+        margin-right: 0;
     }
     &:focus {
         outline: none;
@@ -307,10 +310,9 @@ textarea {
 .blogsearch form button.blog-search-submit-button, 
 .form-group.productlist-search .btn,
 .widget.profile form button.btn {
-    position: relative;
     height: 42px;
-    top: -2px;
-    left: 5px;
+    vertical-align: top;
+    margin: 0;
     font-size: 15px;
     border: none;
     .border-radius(5px);
